# fzi-sem-agent-orchestration

./: .env.example  .gitignore  AGENTS.md  BeispielRouting.py  Prompts.csv  Prompts_fixed.csv  README.md  batch_results.csv  main.py  orchestrator-demo.py  orchestrator.py  pyproject.toml  requirements.txt  run_batch.py  streampipes-test.py  test_ano_agent.py  test_orchestrator.py
agents/: AnoAgent.py  langfuse_config.py  orchestrator.py  physics_agent.py  plot_agent.py  requirements.txt  statistics_agent.py  utils.py
data/: prompts.txt  sample_sensor_data.csv  sp_data.py
docs/: LANGFUSE_INTEGRATION.md
orchestrator/: observability.py  router.py
pipeline/: fetch_data.py
plot_agent/: agent.py  evaluate.py  plot_agent.py  plot_tools.py  requirements.txt  streampipes_client.py  streampipes_data.py
scripts/: upload_subagent_prompts.py
